--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-Hello World.
-
+<html>
+  <head>
+    <title>Burps: Unofficial Online GURPS Character Sheet</title>
+  </head>
+  <body>
+    Hello World.
+  </body>
+</html>
