Add a CSS file, basic info box.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
   <head>
     <title>Burps: Unofficial Online GURPS Character Sheet</title>
+    <link rel="stylesheet" type="text/css" href="css/burps.css">
   </head>
   <body>
-    Hello World.
+    <div id="basic_box">
+      Name<input type="text" id="charactername"> Player<input type="text" id="playername"> Point Total<input type="text" id="pointtotal"><br>
+      Ht<input type="text" id="Ht"> Wt<input type="text" id="Wt"> Size Modifier<input type="text" id="size_modifier"> Age<input type="text" id="Age"> Unspent Pts<input type="text" id="unspent_pts"><br>
+      Appearance<input type="text" id="Appearance">
+    </div>
   </body>
 </html>
