--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <link rel="stylesheet" type="text/css" href="css/burps.css">
   </head>
   <body>
-    <div id="basic_box">
-      Name<input type="text" id="charactername"> Player<input type="text" id="playername"> Point Total<input type="text" id="pointtotal"><br>
-      Ht<input type="text" id="Ht"> Wt<input type="text" id="Wt"> Size Modifier<input type="text" id="size_modifier"> Age<input type="text" id="Age"> Unspent Pts<input type="text" id="unspent_pts"><br>
-      Appearance<input type="text" id="Appearance">
+    <div id="section_top">
+      <div id="controls">
+        <button type="button">Save</button><br/>
+        <button type="button">Load</button>
+      </div>
+      <div id="basic_box">
+        Name<input type="text" id="charactername"> Player<input type="text" id="playername"> Point Total<input type="text" id="pointtotal"><br>
+        Ht<input type="text" id="Ht"> Wt<input type="text" id="Wt"> Size Modifier<input type="text" id="size_modifier"> Age<input type="text" id="Age"> Unspent Pts<input type="text" id="unspent_pts"><br>
+        Appearance<input type="text" id="Appearance">
+      </div>
+    </div>
+    <div id="section_stats">
+      Hey now.
     </div>
   </body>
 </html>
