Table with atts.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,61 @@
     <link rel="stylesheet" type="text/css" href="css/burps.css">
   </head>
   <body>
-    <div id="section_top">
-      <div id="controls">
+    <div class="row">
+      <div class="col_left">
         <button type="button">Save</button><br/>
         <button type="button">Load</button>
       </div>
-      <div id="basic_box">
+      <div class="col_right">
         Name<input type="text" id="charactername"> Player<input type="text" id="playername"> Point Total<input type="text" id="pointtotal"><br>
         Ht<input type="text" id="Ht"> Wt<input type="text" id="Wt"> Size Modifier<input type="text" id="size_modifier"> Age<input type="text" id="Age"> Unspent Pts<input type="text" id="unspent_pts"><br>
         Appearance<input type="text" id="Appearance">
       </div>
     </div>
-    <div id="section_stats">
-      Hey now.
+    <div class="row">
+      <div class="col_left">
+        <table>
+          <tr>
+            <td class="bigtext">ST</td>
+            <td class="bigbox">10</td>
+            <td>[ 0 ]</td>
+            <td class="bigtext">HP</td>
+            <td class="bigbox">10</td>
+            <td class="bigbox">&nbsp;</td>
+            <td>[ 0 ]</td>
+          </tr>
+          <tr>
+            <td class="bigtext">DX</td>
+            <td class="bigbox">10</td>
+            <td>[ 0 ]</td>
+            <td class="bigtext">Will</td>
+            <td class="bigbox">10</td>
+            <td>&nbsp;</td>
+            <td>[ 0 ]</td>
+          </tr>
+          <tr>
+            <td class="bigtext">IQ</td>
+            <td class="bigbox">10</td>
+            <td>[ 0 ]</td>
+            <td class="bigtext">Per</td>
+            <td class="bigbox">10</td>
+            <td>&nbsp;</td>
+            <td>[ 0 ]</td>
+          </tr>
+          <tr>
+            <td class="bigtext">HT</td>
+            <td class="bigbox">10</td>
+            <td>[ 0 ]</td>
+            <td class="bigtext">FP</td>
+            <td class="bigbox">10</td>
+            <td class="bigbox">&nbsp;</td>
+            <td>[ 0 ]</td>
+          </tr>
+        </table>
+      </div>
+      <div class="col_right">
+        now
+      </div>
     </div>
   </body>
 </html>
