--- a/index.html
+++ b/index.html
@@ -21,38 +21,38 @@
           <tr>
             <td class="bigtext">ST</td>
             <td class="bigbox">10</td>
-            <td>[ 0 ]</td>
+            <td>[<input type="text" id="st_points" value="0" class="small">]</td>
             <td class="bigtext">HP</td>
             <td class="bigbox">10</td>
             <td class="bigbox">&nbsp;</td>
-            <td>[ 0 ]</td>
+            <td>[<input type="text" id="hp_points" value="0" class="small">]</td>
           </tr>
           <tr>
             <td class="bigtext">DX</td>
             <td class="bigbox">10</td>
-            <td>[ 0 ]</td>
+            <td>[<input type="text" id="dx_points" value="0" class="small">]</td>
             <td class="bigtext">Will</td>
             <td class="bigbox">10</td>
             <td>&nbsp;</td>
-            <td>[ 0 ]</td>
+            <td>[<input type="text" id="will_points" value="0" class="small">]</td>
           </tr>
           <tr>
             <td class="bigtext">IQ</td>
             <td class="bigbox">10</td>
-            <td>[ 0 ]</td>
+            <td>[<input type="text" id="iq_points" value="0" class="small">]</td>
             <td class="bigtext">Per</td>
             <td class="bigbox">10</td>
             <td>&nbsp;</td>
-            <td>[ 0 ]</td>
+            <td>[<input type="text" id="per_points" value="0" class="small">]</td>
           </tr>
           <tr>
             <td class="bigtext">HT</td>
             <td class="bigbox">10</td>
-            <td>[ 0 ]</td>
+            <td>[<input type="text" id="ht_points" value="0" class="small">]</td>
             <td class="bigtext">FP</td>
             <td class="bigbox">10</td>
             <td class="bigbox">&nbsp;</td>
-            <td>[ 0 ]</td>
+            <td>[<input type="text" id="fp_points" value="0" class="small">]</td>
           </tr>
         </table>
       </div>
