Progress on field creation.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,100 @@
         </table>
       </div>
       <div class="col_right">
-        now
+        <div class="solidborder">
+          <table>
+            <tr>
+              <th>Languages</th>
+              <th>Spoken</th>
+              <th>Written</th>
+              <th>&nbsp;</th>
+            </tr>
+            <tr>
+              <td><input type="text" id="language0"></td>
+              <td><input type="text" id="spoken0"></td>
+              <td><input type="text" id="written0"></td>
+              <td>[<input type="text" id="langpts0" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="language1"></td>
+              <td><input type="text" id="spoken1"></td>
+              <td><input type="text" id="written1"></td>
+              <td>[<input type="text" id="langpts1" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="language2"></td>
+              <td><input type="text" id="spoken2"></td>
+              <td><input type="text" id="written2"></td>
+              <td>[<input type="text" id="langpts2" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="language3"></td>
+              <td><input type="text" id="spoken3"></td>
+              <td><input type="text" id="written3"></td>
+              <td>[<input type="text" id="langpts3" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="language4"></td>
+              <td><input type="text" id="spoken4"></td>
+              <td><input type="text" id="written4"></td>
+              <td>[<input type="text" id="langpts4" class="small">]</td>
+            </tr>
+          </table>
+        </div>
+        <div>
+          <div class="solidborder col_left">
+            <center><strong>DR</strong></center>
+            <table>
+              <tr>
+                <td>Head:</td>
+                <td><input type="text" id="drhead"></td>
+              </tr>
+              <tr>
+                <td>Torso:</td>
+                <td><input type="text" id="drtorso"></td>
+              </tr>
+              <tr>
+                <td>Arm:</td>
+                <td><input type="text" id="drarm"></td>
+              </tr>
+              <tr>
+                <td>Hand:</td>
+                <td><input type="text" id="drhand"></td>
+              </tr>
+              <tr>
+                <td>Leg:</td>
+                <td><input type="text" id="drleg"></td>
+              </tr>
+              <tr>
+                <td>Foot:</td>
+                <td><input type="text" id="drfoot"></td>
+              </tr>
+            </table>
+          </div>
+          <div class="solidborder col_right">
+            <table>
+              <tr>
+                <td>TL<input type="text" id="techlevel"></td>
+                <td>[<input type="text" id="tlpts" class="small">]</td>
+              </tr>
+              <tr>
+                <td colspan="2"><strong>Cultural Familiarities</strong></td>
+              </tr>
+              <tr>
+                <td><input type="text" id="culture0"></td>
+                <td>[<input type="text" id="culturepts0" class="small">]</td>
+              </tr>
+              <tr>
+                <td><input type="text" id="culture1"></td>
+                <td>[<input type="text" id="culturepts1" class="small">]</td>
+              </tr>
+              <tr>
+                <td><input type="text" id="culture2"></td>
+                <td>[<input type="text" id="culturepts2" class="small">]</td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
   </body>
