Finish the first 'page'.

--- a/index.html
+++ b/index.html
@@ -236,5 +236,280 @@
         </div>
       </div> <!-- col_right -->
     </div>
+    <div class="row">
+      <div class="col_left">
+        <div class="solidborder">
+          <center><strong>ADVANTAGES AND PERKS</strong></center>
+          <table>
+            <tr>
+              <td><input type="text" id="advantage0"></td>
+              <td>[<input type="text" id="advantage_pts0" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage1"></td>
+              <td>[<input type="text" id="advantage_pts1" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage2"></td>
+              <td>[<input type="text" id="advantage_pts2" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage3"></td>
+              <td>[<input type="text" id="advantage_pts3" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage4"></td>
+              <td>[<input type="text" id="advantage_pts4" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage5"></td>
+              <td>[<input type="text" id="advantage_pts5" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage6"></td>
+              <td>[<input type="text" id="advantage_pts6" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage7"></td>
+              <td>[<input type="text" id="advantage_pts7" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage8"></td>
+              <td>[<input type="text" id="advantage_pts8" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage9"></td>
+              <td>[<input type="text" id="advantage_pts9" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage10"></td>
+              <td>[<input type="text" id="advantage_pts10" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="advantage11"></td>
+              <td>[<input type="text" id="advantage_pts11" class="small">]</td>
+            </tr>
+          </table>
+          <center><strong>DISADVANTAGES AND QUIRKS</strong></center>
+          <table>
+            <tr>
+              <td><input type="text" id="disadvantage0"></td>
+              <td>[<input type="text" id="disadvantage_pts0" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage1"></td>
+              <td>[<input type="text" id="disadvantage_pts1" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage2"></td>
+              <td>[<input type="text" id="disadvantage_pts2" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage3"></td>
+              <td>[<input type="text" id="disadvantage_pts3" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage4"></td>
+              <td>[<input type="text" id="disadvantage_pts4" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage5"></td>
+              <td>[<input type="text" id="disadvantage_pts5" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage6"></td>
+              <td>[<input type="text" id="disadvantage_pts6" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage7"></td>
+              <td>[<input type="text" id="disadvantage_pts7" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage8"></td>
+              <td>[<input type="text" id="disadvantage_pts8" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage9"></td>
+              <td>[<input type="text" id="disadvantage_pts9" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage10"></td>
+              <td>[<input type="text" id="disadvantage_pts10" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage11"></td>
+              <td>[<input type="text" id="disadvantage_pts11" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="disadvantage12"></td>
+              <td>[<input type="text" id="disadvantage_pts12" class="small">]</td>
+            </tr>
+          </table>
+        </div>
+      </div> <!-- col_left -->
+      <div class="col_right">
+        <div class="solidborder">
+          <center><strong>SKILLS</strong></center>
+          <table>
+            <tr>
+              <td><strong>Name</strong></td>
+              <td><strong>Level</strong></td>
+              <td><strong>Relative Level</strong></td>
+              <td>&nbsp;</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname0"></td>
+              <td><input type="text" id="skilllevel0"></td>
+              <td><input type="text" id="skillrellevel0"></td>
+              <td>[<input type="text" id="skillpts0" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname1"></td>
+              <td><input type="text" id="skilllevel1"></td>
+              <td><input type="text" id="skillrellevel1"></td>
+              <td>[<input type="text" id="skillpts1" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname2"></td>
+              <td><input type="text" id="skilllevel2"></td>
+              <td><input type="text" id="skillrellevel2"></td>
+              <td>[<input type="text" id="skillpts2" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname3"></td>
+              <td><input type="text" id="skilllevel3"></td>
+              <td><input type="text" id="skillrellevel3"></td>
+              <td>[<input type="text" id="skillpts3" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname4"></td>
+              <td><input type="text" id="skilllevel4"></td>
+              <td><input type="text" id="skillrellevel4"></td>
+              <td>[<input type="text" id="skillpts4" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname5"></td>
+              <td><input type="text" id="skilllevel5"></td>
+              <td><input type="text" id="skillrellevel5"></td>
+              <td>[<input type="text" id="skillpts5" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname6"></td>
+              <td><input type="text" id="skilllevel6"></td>
+              <td><input type="text" id="skillrellevel6"></td>
+              <td>[<input type="text" id="skillpts6" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname7"></td>
+              <td><input type="text" id="skilllevel7"></td>
+              <td><input type="text" id="skillrellevel7"></td>
+              <td>[<input type="text" id="skillpts7" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname8"></td>
+              <td><input type="text" id="skilllevel8"></td>
+              <td><input type="text" id="skillrellevel8"></td>
+              <td>[<input type="text" id="skillpts8" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname9"></td>
+              <td><input type="text" id="skilllevel9"></td>
+              <td><input type="text" id="skillrellevel9"></td>
+              <td>[<input type="text" id="skillpts9" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname10"></td>
+              <td><input type="text" id="skilllevel10"></td>
+              <td><input type="text" id="skillrellevel10"></td>
+              <td>[<input type="text" id="skillpts10" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname11"></td>
+              <td><input type="text" id="skilllevel11"></td>
+              <td><input type="text" id="skillrellevel11"></td>
+              <td>[<input type="text" id="skillpts11" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname12"></td>
+              <td><input type="text" id="skilllevel12"></td>
+              <td><input type="text" id="skillrellevel12"></td>
+              <td>[<input type="text" id="skillpts12" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname13"></td>
+              <td><input type="text" id="skilllevel13"></td>
+              <td><input type="text" id="skillrellevel13"></td>
+              <td>[<input type="text" id="skillpts13" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname14"></td>
+              <td><input type="text" id="skilllevel14"></td>
+              <td><input type="text" id="skillrellevel14"></td>
+              <td>[<input type="text" id="skillpts14" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname15"></td>
+              <td><input type="text" id="skilllevel15"></td>
+              <td><input type="text" id="skillrellevel15"></td>
+              <td>[<input type="text" id="skillpts15" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname16"></td>
+              <td><input type="text" id="skilllevel16"></td>
+              <td><input type="text" id="skillrellevel16"></td>
+              <td>[<input type="text" id="skillpts16" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname17"></td>
+              <td><input type="text" id="skilllevel17"></td>
+              <td><input type="text" id="skillrellevel17"></td>
+              <td>[<input type="text" id="skillpts17" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname18"></td>
+              <td><input type="text" id="skilllevel18"></td>
+              <td><input type="text" id="skillrellevel18"></td>
+              <td>[<input type="text" id="skillpts18" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname19"></td>
+              <td><input type="text" id="skilllevel19"></td>
+              <td><input type="text" id="skillrellevel19"></td>
+              <td>[<input type="text" id="skillpts19" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname20"></td>
+              <td><input type="text" id="skilllevel20"></td>
+              <td><input type="text" id="skillrellevel20"></td>
+              <td>[<input type="text" id="skillpts20" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname21"></td>
+              <td><input type="text" id="skilllevel21"></td>
+              <td><input type="text" id="skillrellevel21"></td>
+              <td>[<input type="text" id="skillpts21" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname22"></td>
+              <td><input type="text" id="skilllevel22"></td>
+              <td><input type="text" id="skillrellevel22"></td>
+              <td>[<input type="text" id="skillpts22" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname23"></td>
+              <td><input type="text" id="skilllevel23"></td>
+              <td><input type="text" id="skillrellevel23"></td>
+              <td>[<input type="text" id="skillpts23" class="small">]</td>
+            </tr>
+            <tr>
+              <td><input type="text" id="skillname24"></td>
+              <td><input type="text" id="skilllevel24"></td>
+              <td><input type="text" id="skillrellevel24"></td>
+              <td>[<input type="text" id="skillpts24" class="small">]</td>
+            </tr>
+          </table>
+        </div>
+      </div> <!-- col_right -->
+    </div>
   </body>
 </html>
