Resize a few fields.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="col_right">
         Name<input type="text" id="charactername"> Player<input type="text" id="playername"> Point Total<input type="text" id="pointtotal"><br>
         Ht<input type="text" id="Ht"> Wt<input type="text" id="Wt"> Size Modifier<input type="text" id="size_modifier"> Age<input type="text" id="Age"> Unspent Pts<input type="text" id="unspent_pts"><br>
-        Appearance<input type="text" id="Appearance">
+        Appearance<input type="text" id="appearance_top">
       </div>
     </div>
     <div class="row">
